@@ -6,38 +6,46 @@
 #'
 #' @export
 
-infer_types = function(code, init = list(), scalar = FALSE, ...) {
-  UseMethod("infer_types")
-}
+infer_types =
+function(code, init = list(), scalar = FALSE,
+         constraintHandlers = getConstraintHandlers(),
+         solveHandlers = getSolveHandlers(), ...) 
+     UseMethod("infer_types")
+
 
 
 #' @export
 infer_types.ControlFlowGraph =
-function(code, init = list(), scalar = FALSE, set = ConstraintSet$new(),
-          ConstrainHandlers = getConstrainHandlers(),  ...)
+function(code, init = list(), scalar = FALSE,
+         constraintHandlers = getConstraintHandlers(),
+         solveHandlers = getSolveHandlers(),
+         set = ConstraintSet$new(),
+         ...)
 {
   if(length(init) && !is(init, "ConstraintSet")) {
        #XXX This should be in the initialization method for set.
      if(length(names(init)) == 0) 
          names(init) = names(code$params)[seq(along = init)]
-     
+
      mapply(function(type, name)
                set$append(name, type),  # Need to convert the types from user-convenient types to those we expect (in typesys?)
             init, paste0(names(init), "")) # "_1"
   }
-#browser()  
+
   
-  constraints = constrain(code, set = set, scalar = scalar)
+  constraints = constrain(code, set = set, scalar = scalar, handlers = constraintHandlers)
   
-  types = solve(constraints)
+  types = solve(constraints, solveHandlers)
 
   return (types)
 }
 
 #' @export
-infer_types.default = function(code, init = list(), ...) {
+infer_types.default = function(code, init = list(), scalar = FALSE,
+                               constraintHandlers = getConstraintHandlers(),
+                               solveHandlers = getSolveHandlers(), ...) {
   cfg = rstatic::to_cfg(rstatic::to_ast(code), in_place = TRUE)
-  infer_types(cfg, init, ...)
+  infer_types(cfg, init, scalar, constraintHandlers, solveHandlers, ...)
 }
 
 
@@ -46,29 +54,34 @@ infer_types.default = function(code, init = list(), ...) {
 
 infer_types.function =
 function(code, init = list(), scalar = FALSE, set = ConstraintSet$new(),
-          ConstrainHandlers = getConstrainHandlers(),  ...)
+         constraintHandlers = getConstraintHandlers(),
+         solveHandlers = getSolveHandlers(), ...)
 {
-   infer_types(rstatic::to_cfg(code), init, scalar, set, ConstrainHandlers, ...)
+   infer_types(rstatic::to_cfg(code), init, scalar, constraintHandlers, solveHandlers, set, ...)
 }
 
 # This is probably not useful for calls such as x + 1 where we don't know x
 # but we a) we can get the current type of x from the workspace, and
 # b) calls such as foo(2) do make sense - we can get the return type.
 infer_types.call =
-function(code, init = list(), scalar = FALSE, set = ConstraintSet$new(),
-          ConstrainHandlers = getConstrainHandlers(),  ...)
+function(code, init = list(), scalar = FALSE, 
+         constrainHandlers = getConstraintHandlers(),
+         solveHandlers = getSolveHandlers(),
+         set = ConstraintSet$new(), ...)
 {
    f = function() x
    body(f) = code
-   infer_types(f, init, scalar, set, ConstrainHandlers, ...)
+   infer_types(f, init, scalar, constraintHandlers, solveHandlers, set, ...)
    # probably want the return type.
 }
 
 `infer_types.{` =
-function(code, init = list(), scalar = FALSE, set = ConstraintSet$new(),
-          ConstrainHandlers = getConstrainHandlers(),  ...)
+function(code, init = list(), scalar = FALSE, 
+         constrainHandlers = getConstraintHandlers(),
+         solveHandlers = getSolveHandlers(),
+         set = ConstraintSet$new(), ...)
 {
    f = function() {}
    body(f) = code
-   infer_types(f, init, scalar, set, ConstrainHandlers, ...)
+   infer_types(f, init, scalar, constraintHandlers, solveHandlers, set, ...)
 }
